--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 pathspec==0.8.0
 pycodestyle==2.6.0
+python-dotenv==0.13.0
 regex==2020.5.14
 six==1.15.0
 SQLAlchemy==1.3.17
