--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ appdirs==1.4.4
 attrs==19.3.0
 black==19.10b0
 click==7.1.2
+ecdsa==0.15
 Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
+future==0.18.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -15,9 +17,11 @@ MarkupSafe==1.1.1
 pathspec==0.8.0
 psycopg2-binary==2.8.5
 pycodestyle==2.6.0
+pycryptodome==3.3.1
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
+python-jose-cryptodome==1.3.2
 regex==2020.5.14
 six==1.15.0
 SQLAlchemy==1.3.17
