--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "python.pythonPath": "venv/bin/python",
-  "python.linting.pylintEnabled": false,
-  "python.linting.pycodestyleEnabled": true,
-  "python.linting.enabled": true,
-  "python.formatting.provider": "black"
+  "python.pythonPath": "venv/bin/python"
 }
