--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
 alembic==1.4.2
 appdirs==1.4.4
+astroid==2.4.1
 attrs==19.3.0
+autopep8==1.5.2
 black==19.10b0
 click==7.1.2
 ecdsa==0.15
 Flask==1.1.2
 Flask-Cors==3.0.8
+flask-jsonschema-validator==0.0.4
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 future==0.18.2
 gunicorn==20.0.4
+importlib-metadata==1.6.0
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 pathspec==0.8.0
 psycopg2-binary==2.8.5
 pycodestyle==2.6.0
 pycryptodome==3.6.6
+pylint==2.5.2
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
@@ -28,3 +38,5 @@ SQLAlchemy==1.3.17
 toml==0.10.1
 typed-ast==1.4.1
 Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.1.0
